5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1592_1803.log
== TEST (2019-04-01 13:42:21) 
-- CODE:
var1=int(input(dig1:))
var2=int(input(dig2:))
var3=int(input(dig3:))
var4=int(input(dig4:))

digv =  var4*2+var3*3+var2*4+var1*5
no = digv%11
print(no)
-- ERROR:
File "XXXX", line 1
    var1=int(input(dig1:))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:42:52) 
-- CODE:
var1=int(input("dig1:"))
var2=int(input("dig2:"))
var3=int(input("dig3:"))
var4=int(input("dig4:"))

digv =  var4*2+var3*3+var2*4+var1*5
no = digv%11
print(no)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:43:08) 
-- CODE:
var1=int(input("dig1:"))
var2=int(input("dig2:"))
var3=int(input("dig3:"))
var4=int(input("dig4:"))

digv =  var4*2+var3*3+var2*4+var1*5
no = digv%11
print(no)
-- EXECUTION TIME:
0.196768
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1803/main.py", line 2, in <module>
    var2=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:43:11) 
-- CODE:
var1=int(input("dig1:"))
var2=int(input("dig2:"))
var3=int(input("dig3:"))
var4=int(input("dig4:"))

digv =  var4*2+var3*3+var2*4+var1*5
no = digv%11
print(no)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
